# BeatPrints

./: beatprints.py  pyproject.toml
BeatPrints/: config.py  lrclib.py  lyrics.py
lyrics/: 天地龍鱗（大型紀錄片《紫禁城》主題歌）_Leehom_Wang.txt  童话镇_陈一发儿.txt
